--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 :root {
     --blue: #a7cdf3;
     --white: #ffffff;
+    --grey: lightgray;
     --pink: #bba0b2;
     --red: rgb(168, 38, 38);
     --font1: 'Poppins', sans-serif;
@@ -77,7 +78,6 @@ video {
 
 .container {
     width: 100%;
-    margin: 50px auto;
     padding:0;
     
 }
@@ -230,6 +230,8 @@ input:focus{
 input::placeholder{
     padding: 5px;
     letter-spacing: 1px;
+    color: var(--grey);
+    font-size: 2rem;
     
 }
 
@@ -295,6 +297,7 @@ input::placeholder{
         width: 55%;
 
     }
+
     h1 {
         font-size: 4rem;
         margin: 20px 0 30px 0;
@@ -305,18 +308,29 @@ input::placeholder{
     }
 
     h5 {
-        font-size: 2rem;
+        font-size: 2.9rem;
 
+    }
+
+    #close {
+        top: 12px;
+        right: 16px;
+        background: transparent;
     }
 
     .btn {
         padding: 10px;
-        margin-top: 40px;
+        margin-top: 0;
         font-size: 2rem;
+        width: 70%;
     }
 
     li {
         font-size: 2.5rem;
+    }
+
+    #loc-modal {
+        width: 70%;
     }
     
 }
@@ -326,25 +340,73 @@ input::placeholder{
     .row {
         width: 100%;
         height: 100vh;
-        border-radius: 0;
+        border-radius: 0;    
+        background-image: linear-gradient(to right, rgba(255,255,255,0.1), rgba(255,255,255,0.1));
+    }
+
+    h5 {
+        color: black;
+        margin: 0;
+    }
+
+    .modal-content {
+        background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.5));
+        padding: 50px;
+        border-radius: 25px;
+    }
+
+
+    .w-box {
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 70%;
+        
+    }
+
+    #close {
+        visibility: hidden;
+    }
+
+
+    input {
+        margin: 30px auto;
+        width: 90%; 
+    }
+
+    input::placeholder{
+        font-size: 2rem;
         
     }
 
     .btn {
-        padding: 10px;
-        margin-top: 20px;
+        padding: 13px;
+        font-size: 2rem;
+        width: 90%;
+        margin-top: 0;
+    }
+
+    #loc-modal {
+        margin-top: 50px;
+
     }
 
 
-    input::placeholder{
-        font-size: 1rem;
-
-        
+    .alert {
+        width: 90%;
     }
 }
 
 @media screen and (max-width: 400px) {
     html {
         font-size: 50%;
+    }
+
+
+.w-box {
+    width: 100%;
     }
 }
